<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <import type="android.view.View"></import>
        <variable
            name="changePasswordViewModel"
            type="de.psekochbuch.exzellenzkoch.userinterfacelayer.viewmodel.ChangePasswordViewModel" />


    </data>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textView_new_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/enter_new_password"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/textEdit_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:ems="10"
            android:inputType="textPassword"
            android:text="@={changePasswordViewModel.password}"
            android:textAlignment="center"
            android:textSize="16sp"
            android:padding="8dp"/>

        <Button
            android:id="@+id/button_change_password"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:padding="8dp" />
    </LinearLayout>
</layout>